--- a/PF_RMarkdown.Rmd
+++ b/PF_RMarkdown.Rmd
@@ -28,10 +28,67 @@ Encontramos una importancia en este informe debido a la relación que tendría l
 
 En estos datos, se encuentran diversas variables que utilizaremos en este trabajo para dar respuestas a las preguntas planteadas posteriormente. A continuación, se expondrán las siete variables a utilizar:
 
-- **PIB per Cápita:** El PIB per cápita es un indicador económico que mide la relación existente entre el nivel de renta de un país y su población. Tiene datos que fueron calculados como proyecciones de los valores del 2014, además la ecuación utiliza el logaritmo natural del PIB per cápita debido a que se adapta mejor al resto de datos que el PIB per cápita por sí solo.
+-   **PIB per Cápita:** El PIB per cápita es un indicador económico que mide la relación existente entre el nivel de renta de un país y su población. Tiene datos que fueron calculados como proyecciones de los valores del 2014, además la ecuación utiliza el logaritmo natural del PIB per cápita debido a que se adapta mejor al resto de datos que el PIB per cápita por sí solo.
 
-- **Esperanza de vida:** La esperanza de vida es un indicador que mide el promedio de años que se esperaría que una persona viva, basado en el nivel de mortalidad de un determinado grupo de población. Estos datos son series de tiempo construidas con datos extraídos de la Organización Mundial de la Salud y de los Indicadores de Desarrollo Mundial.
+-   **Esperanza de vida:** La esperanza de vida es un indicador que mide el promedio de años que se esperaría que una persona viva, basado en el nivel de mortalidad de un determinado grupo de población. Estos datos son series de tiempo construidas con datos extraídos de la Organización Mundial de la Salud y de los Indicadores de Desarrollo Mundial.
 
 - **La familia, Libertad, generosidad y las percepciones de corrupción:** Estas cuatro variables son valores extraídos de las encuestas mundiales de Gallup, encuestas binarias donde se responde 0 o 1 a diversas preguntas.
 
 - **Dystopia:** Es el nombre de un país hipotético que tiene los valores promedios más bajos del mundo entre 2013 y 2015 para cada una de las variables. En el informe Dystopia tiene la utilidad de pautar una referencia con la que se pueda comparar los valores de los demás países.
+
+```{r message=FALSE, warning=FALSE, eval=TRUE, echo=FALSE}
+library(tidyverse)
+library(readxl)
+library(readr)
+library(ggplot2)
+library(cowplot)
+library(boot)
+library(QuantPsyc)
+
+setwd("C:/Users/Samuel/Desktop/Data.Science UCAB/ProyectoFinal")
+data_2016 <- read_csv("2016.csv")%>% 
+  rename( Calificacion = `Happiness Score`,
+          PIB_per_capita = `Economy (GDP per Capita)`,
+          Esperanza_vida = `Health (Life Expectancy)`,
+          Corrupcion = `Trust (Government Corruption)`,
+          Pais = `Country`,
+          Ranking_felicidad = `Happiness Rank`,
+          Familia = `Family`,
+          Generosidad = `Generosity`,
+          Libertades = `Freedom`) 
+data_2016$`Lower Confidence Interval` = NULL
+data_2016$`Upper Confidence Interval` = NULL
+
+
+View(data_2016)
+
+
+```
+
+# **_Analisis_**
+
+Para la composicion del analisis del trabajo se dividira en 6 partes en donde se daran respuesta a las 6 interrogantes o objetivos especificos planteados en la introduccion del trabajo.
+
+
+1. En este primer apartado haremos la respectiva comparacion y medicion del nivel de felicidad de las regiones observadas en el estudio, dichas regiones son 10 las cuales son: Norte América, Europa Oriental, América Latina y el Caribe, Asia Oriental, Medio Oriente y África del Norte, Europa central y oriental, Sudeste de Asia, Asia meridional y Sub-Saharan África. En el **Grafico1** podemos observar la comparación de las regiones mencionadas anteriormente y su nivel de felicidad correspondiente, también en el mismo grafico se puede observar una la línea de corte que nos indica el promedio de la clasificación de felicidad de todas las regiones.
+
+```{r message=FALSE, warning=FALSE, eval=TRUE, echo=FALSE}
+tabla1 <- data_2016 %>% 
+  group_by(Region) %>% 
+  summarise(Medias = mean(Calificacion)) %>% 
+  arrange(-Medias) %>% 
+  ungroup()
+
+mean_calificacion <- mean(data_2016$Calificacion)
+
+grafica1 <- ggplot(data = tabla1, aes(x = Region, y = Medias, fill = Region))+
+  geom_bar(stat = "summary", fun = mean)+
+  geom_hline(yintercept=mean_calificacion, linetype="dashed", color = "#CD0000", size = 2)+
+  ggtitle("Grafica1. Niveles de Felicidad por Regiones" )
+
+grafica1 +
+  theme(axis.text.x = element_text(angle = 70, hjust = 1))
+
+```
+
+Como podemos observar en la **Grafica1** el mayor nivel de felicidad en cuanto a regiones se lo lleva _Australia y New Zelanda_ con un puntaje de 7.33 puntos, y por otro lado vemos con el peor puntaje de Felicidad a _Sub-Saharan Africa_ con un puntaje de 4.14 puntos. Promediando los datos de los niveles de felicidad de cada region obtenemos un promedio de felicidad mundial de 5.38 puntos, el cual se puede evidenciar en la linea roja del grafico en la cual vemos que las regiones que se aproximan a este promedio son _Europa Central y Oriental_, _Medio Oriente y África del Norte_ y _El Sudeste de Asia_
