--- a/PF_RMarkdown.Rmd
+++ b/PF_RMarkdown.Rmd
@@ -11,17 +11,17 @@ En el proyecto final se utilizará una data llamada ["World Happiness Report"](h
 
 Encontramos una importancia en este informe debido a la relación que tendría la felicidad en las decisiones migratorias de las personas en donde se podría ver una similitud en lo que llamamos felicidad con la calidad de vida. Esta es una de las decisiones más importantes a la hora de emigrar, _¿dónde será el mejor lugar para dar comienzo a una nueva vida?_, esto en un país como Venezuela con altos niveles de migración es algo que todos en algún momento hemos oído ya sea por familiares o amigos, por lo cual, se plantearan en el estudio las siguientes interrogantes a tratar:
 
-- **_¿Cuáles regiones tienen los mayores y peores niveles de felicidad?_** En esta interrogante queremos comparar los niveles de felicidad entre las diferentes regiones y calcular una media del nivel de felicidad de todas las regiones
+- **_¿Cuáles regiones tienen los mayores y peores niveles de felicidad?_** En esta interrogante queremos comparar los niveles de felicidad entre las diferentes regiones y calcular una media del nivel de felicidad de todas las regiones.
 
-- **_¿Que variable tienen mayor ponderación en el nivel de Felicidad?_** En esta interrogante queremos ver cuanto peso tienen en el cálculo de la felicidad las siete variables que son tomadas en cuenta
+- **_¿Que variable tienen mayor ponderación en el nivel de Felicidad?_** En esta interrogante queremos ver cuanto peso tienen en el cálculo de la felicidad las siete variables que son tomadas en cuenta.
 
-- **_¿Hay relación entre el PIB per cápita con las 4 variables encuestadas del informe de la felicidad?_** En esta interrogante queremos ver si existe una relación en cuanto al PIB per cápita y las variables de la Familia, Libertades, Generosidad y Corrupción, las cuales son medidas por las encuestas de Gallup
+- **_¿Hay relación entre el PIB per cápita con las 4 variables encuestadas del informe de la felicidad?_** En esta interrogante queremos ver si existe una relación en cuanto al PIB per cápita y las variables de la Familia, Libertades, Generosidad y Corrupción, las cuales son medidas por las encuestas de Gallup.
 
-- **_¿Hay relación entre la Esperanza de vida con las 4 variables encuestadas del informe de la felicidad?_** En esta interrogante queremos ver si existe una relación en cuanto a la Esperanza de vida y las variables de la Familia, Libertades, Generosidad y Corrupción, las cuales son medidas por las encuestas de Gallup
+- **_¿Hay relación entre la Esperanza de vida con las 4 variables encuestadas del informe de la felicidad?_** En esta interrogante queremos ver si existe una relación en cuanto a la Esperanza de vida y las variables de la Familia, Libertades, Generosidad y Corrupción, las cuales son medidas por las encuestas de Gallup.
 
-- **_¿Cómo es la correlación entre el PIB per cápita y el nivel de felicidad?_** En esta interrogante queremos observar si existe una relación ante aumento o reducciones del PIB per cápita equivalen a un efecto igual en el nivel de felicidad
+- **_¿Cómo es la correlación entre el PIB per cápita y el nivel de felicidad?_** En esta interrogante queremos observar si existe una relación ante aumento o reducciones del PIB per cápita equivalen a un efecto igual en el nivel de felicidad.
 
-- **_¿El comportamiento de las demás variables presentan la misma correlación que entre el PIB per cápita y el nivel de felicidad?_** En esta interrogante queremos observar si la correlación de las demás variables del informe con el nivel de felicidad presenta una relación diferente a la encontrada con el PIB per cápita
+- **_¿El comportamiento de las demás variables presentan la misma correlación que entre el PIB per cápita y el nivel de felicidad?_** En esta interrogante queremos observar si la correlación de las demás variables del informe con el nivel de felicidad presenta una relación diferente a la encontrada con el PIB per cápita.
 
 
 # **_Metodología_**
@@ -91,4 +91,54 @@ grafica1 +
 
 ```
 
-Como podemos observar en la **Grafica1** el mayor nivel de felicidad en cuanto a regiones se lo lleva _Australia y New Zelanda_ con un puntaje de 7.33 puntos, y por otro lado vemos con el peor puntaje de Felicidad a _Sub-Saharan Africa_ con un puntaje de 4.14 puntos. Promediando los datos de los niveles de felicidad de cada region obtenemos un promedio de felicidad mundial de 5.38 puntos, el cual se puede evidenciar en la linea roja del grafico en la cual vemos que las regiones que se aproximan a este promedio son _Europa Central y Oriental_, _Medio Oriente y África del Norte_ y _El Sudeste de Asia_
+Como podemos observar en la **Grafica1** el mayor nivel de felicidad en cuanto a regiones se lo lleva _Australia y New Zelanda_ con un puntaje de 7.33 puntos, y por otro lado vemos con el peor puntaje de Felicidad a _Sub-Saharan África_ con un puntaje de 4.14 puntos. Promediando los datos de los niveles de felicidad de cada región obtenemos un promedio de felicidad mundial de 5.38 puntos, el cual se puede evidenciar en la línea roja del grafico en la cual vemos que las regiones que se aproximan a este promedio son _Europa Central y Oriental_, _Medio Oriente y África del Norte_ y _El Sudeste de Asia_.
+
+
+2. En este segundo apartado haremos la medición de cuanto representa cada variable en el peso total del nivel de felicidad indicado en la **Grafica2**, para ello, utilizaremos el promedio de felicidad mundial obtenido en el apartado anterior como nuestro nivel de felicidad base, y para las variables utilizaremos el promedio mundial de cada una de las distintas variables y así ver cuanta ponderación tiene cada variable con respecto al nivel de felicidad promedio.
+
+```{r message=FALSE, warning=FALSE, eval=TRUE, echo=FALSE}
+GDPporc <- mean(data_2016$PIB_per_capita) * 100 / mean_calificacion
+familiaPorc <- mean(data_2016$Familia) * 100 / mean_calificacion
+VidaPorc <- mean(data_2016$Esperanza_vida) * 100 / mean_calificacion
+LibertadesPorc <- mean(data_2016$Libertades) * 100 / mean_calificacion
+CorrupcionPorc <- mean(data_2016$Corrupcion) * 100 / mean_calificacion
+GenerosidadPorc <- mean(data_2016$Generosidad) * 100 / mean_calificacion
+DystopiaPorc <- mean(data_2016$`Dystopia Residual`) * 100 / mean_calificacion
+
+tabla2 <- data.frame(Variables = c("GDP", "Familia", "Esperanza_vida", "Libertades", "Corrupcion",
+                                   "Generosidad", "Dystopia"),
+                     Porcentajes = c(GDPporc, familiaPorc, VidaPorc, LibertadesPorc,
+                                     CorrupcionPorc, GenerosidadPorc, DystopiaPorc))
+
+grafica2 <- ggplot(data = tabla2, aes(x = Variables, y = Porcentajes, fill = Variables))+
+  geom_bar(stat = "summary", fun = mean)+
+  ggtitle("Grafica2. Ponderacion en el nivel de Felicidad" )
+
+grafica2 +
+  theme(axis.text.x = element_text(angle = 70, hjust = 1, ))
+
+```
+
+Como podemos observar en la **Grafica2** la variable con mayor peso en la medición de la felicidad es Dystopia con un 43.21% del porcentaje total, y les siguen el PIB per cápita con un 17.72% y la Familia con un 14.75% volviendo a estas tres variables las más importantes en la medición de la felicidad, para complementar tenemos a la Esperanza de vida con un 10.36%, la Libertad con un 6.89%, la Generosidad con un 4.51% y por último la Corrupción con un 2.56%. A pesar de que Dystopia sea la variable con más peso, esta para el estudio no aporta mucha información debido a que se refiere a una variable de ajusta, por lo cual el PIB per cápita si nos diese una mejor información en cuanto a su relevancia en el nivel de felicidad.
+
+3.  En este tercer apartado haremos la comparación de la variable del PIB per cápita con las cuatro variables del informe que fueron traídas de las encuestas de Gallup que son la Familia, las Libertades, la Generosidad y la Corrupción. Se busca hallar si existe alguna relación entre los niveles de PIB per cápita de los países con las respuestas de las personas en la encuesta de Gallup. Podremos ver en la **Grafica3** dicha comparación dividida en cuatro cuadros representando las principales regiones con el nivel de felicidad más alto.
+
+```{r message=FALSE, warning=FALSE, eval=TRUE, echo=FALSE}
+tabla3 <- data_2016 %>% 
+  group_by(Region, PIB_per_capita) %>% 
+  summarise(puntaje = sum(Familia, Libertades, Generosidad, 
+                          Corrupcion)) %>% 
+  arrange(-puntaje) %>% 
+  ungroup() 
+
+grafica3 <- filter(tabla3, Region %in% c("Australia and New Zealand", "Western Europe",
+                                         "North America","Latin America and Caribbean")) %>%
+  ggplot(aes(PIB_per_capita, puntaje, color = Region)) +
+  geom_point(size = 2) +
+  facet_grid(. ~ Region)+
+  ggtitle("Grafica3. Relacion del PIB per capita con las 4 variables encuestadas" )
+grafica3
+
+```
+
+Como podemos observar en la **Grafica3** en el eje x de nuestro eje cartesiano tenemos los niveles de PIB per cápita de las cuatro diferentes regiones, y en el eje y tenemos el puntaje que es la suma de los puntajes de las cuatro variables encuestas del informe. Para esta grafica podemos ver en los puntos de los cuadros como se ubican los diferentes países de las regiones tomando en consideración el PIB per cápita y las cuatro variables encuestadas, en donde observamos que existen diferentes puntajes de las variables encuestadas para un mismo nivel de PIB per capital y viceversa, un ejemplo más claro es el cuadro del Este de Europa en donde la mayoría de los países se alinean cercanos al mismo nivel de PIB per cápita pero en relación con el puntaje de las variables encuestadas varia en todo el rango de medición. Por lo cual, no podríamos sugerir que existe una relación entre el PIB per cápita y las respuestas de las personas en la encuesta de Gallup.
