--- a/PF_RMarkdown.Rmd
+++ b/PF_RMarkdown.Rmd
@@ -143,3 +143,11 @@ grafica3
 ```
 
 Como podemos observar en la **Grafica3** en el eje x de nuestro eje cartesiano tenemos los niveles de PIB per cápita de las cuatro diferentes regiones, y en el eje y tenemos el puntaje que es la suma de los puntajes de las cuatro variables encuestas del informe. Para esta grafica podemos ver en los puntos de los cuadros como se ubican los diferentes países de las regiones tomando en consideración el PIB per cápita y las cuatro variables encuestadas, en donde observamos que existen diferentes puntajes de las variables encuestadas para un mismo nivel de PIB per capital y viceversa, un ejemplo más claro es el cuadro del Este de Europa en donde la mayoría de los países se alinean cercanos al mismo nivel de PIB per cápita pero en relación con el puntaje de las variables encuestadas varia en todo el rango de medición. Por lo cual, no podríamos sugerir que existe una relación entre el PIB per cápita y las respuestas de las personas en la encuesta de Gallup.
+
+# **Conclusiones**
+
+El análisis de los datos del Informe Mundial de la Felicidad reflejaron que el PIB per cápita tiene una alta correlación con la felicidad en cada país, además es la variable que tiene más relevancia en el puntaje de la felicidad. De hecho, en los gráficos se pudo observar que esta variable fue la que menor desviación estándar tiene, esto indica que la variación en los datos es menor que en las otras variables. 
+
+A su vez, también debe resaltarse que la región que más alto puntaje de felicidad fue la de Nueva Zelanda y Australia. Sin embargo, a través de este análisis no se puede terminar cual es la variable que hace más feliz a esta región. 
+
+
