--- a/PF_RMarkdown.Rmd
+++ b/PF_RMarkdown.Rmd
@@ -138,7 +138,22 @@ grafica3 <- filter(tabla3, Region %in% c("Australia and New Zealand", "Western E
   facet_grid(. ~ Region)+
   ggtitle("Grafica3. Relacion del PIB per capita con las 4 variables encuestadas" )
 grafica3
-
 ```
 
+
 Como podemos observar en la **Grafica3** en el eje x de nuestro eje cartesiano tenemos los niveles de PIB per cápita de las cuatro diferentes regiones, y en el eje y tenemos el puntaje que es la suma de los puntajes de las cuatro variables encuestas del informe. Para esta grafica podemos ver en los puntos de los cuadros como se ubican los diferentes países de las regiones tomando en consideración el PIB per cápita y las cuatro variables encuestadas, en donde observamos que existen diferentes puntajes de las variables encuestadas para un mismo nivel de PIB per capital y viceversa, un ejemplo más claro es el cuadro del Este de Europa en donde la mayoría de los países se alinean cercanos al mismo nivel de PIB per cápita pero en relación con el puntaje de las variables encuestadas varia en todo el rango de medición. Por lo cual, no podríamos sugerir que existe una relación entre el PIB per cápita y las respuestas de las personas en la encuesta de Gallup.
+
+```{}
+# Regresion lineal: puntaje = intercepto + B*PIB_per_capita 
+modelo_1 <- lm(Calificacion ~ PIB_per_capita, data = data_2016, na.action = na.exclude)
+summary(modelo_1)
+
+#Grafico de dispersion
+grafico10 <- ggplot(data_2016, aes(PIB_per_capita, Calificacion)) +
+            geom_point() +
+            geom_smooth(method = "lm", colour = "Red")
+grafico10
+```
+
+
+
