--- a/PF_RMarkdown.Rmd
+++ b/PF_RMarkdown.Rmd
@@ -177,7 +177,7 @@ grafica4
 Como podemos observar en la **Grafica4** en el eje x de nuestro eje cartesiano tenemos los niveles de Esperanza de vida de las cuatro diferentes regiones, y en el eje y tenemos el puntaje que es la suma de los puntajes de las cuatro variables encuestas del informe. Para esta grafica podemos ver en los puntos de los cuadros como se ubican los diferentes países de las regiones tomando en consideración la Esperanza de vida y las cuatro variables encuestadas, en donde observamos que existen diferentes puntajes de las variables encuestadas para un mismo nivel de Esperanza de vida y viceversa, un ejemplo más claro es el cuadro del Este de Europa en donde la mayoría de los países se alinean cercanos al mismo nivel de Esperanza de vida pero en relación con el puntaje de las variables encuestadas varia en todo el rango de medición. Por lo cual, no podríamos sugerir que existe una relación entre el Esperanza de vida y las respuestas de las personas en la encuesta de Gallup.
 
 
-### **4. Relacion entre el PIB per-cápita y la felicidad**
+### **5. Relacion entre el PIB per-cápita y la felicidad**
 
  
 ```{r message=FALSE, warning=FALSE, eval=TRUE, echo=FALSE} 
@@ -194,7 +194,51 @@ En el presente apartado se realizara una descripcion de los aspectos mas destaca
 
 - El coeficiente de regresión (B) es igual a 2.18, por lo que se puede suponer que     ante una variación en promedio de 1 % en el PIB p.c se verá reflejado en una         variación de 2.18 puntos en promedio en el índice de felicidad.
 - El R cuadrado ajustado arrojó un valor 0.62, lo que indica que para este modelo el   PIB p.c podría explicar en un 60% el comportamiento de la variable felicidad.
-- El p-value fue menor a 0.05, por lo tanto se rechaza la hipótesis nula de que no     existe relación entre las variables
+- El p-value fue menor a 0.05, por lo tanto se rechaza la hipótesis nula de que no     existe relación entre las variables.
+
+
+### **6. Comparacion de la influencia de la libertad, familia, PIBpc y esperanza de vida sobre la felicidad**
+
+```{r message=FALSE, warning=FALSE, eval=TRUE, echo=FALSE}
+grafico_11<- data_2016 %>% ggplot() + 
+  geom_point(aes(Familia , Calificacion)) +
+  geom_smooth(aes(Familia,Calificacion),method=lm)+
+  xlab('Familia')
+
+grafico_11
+
+grafico_12 <- data_2016 %>% ggplot() + 
+  geom_point(aes(data_2016$`Esperanza_vida` , Calificacion)) +
+  geom_smooth(aes(data_2016$`Esperanza_vida`, Calificacion), method=lm)+
+  xlab('Salud/Esperanza de vida')
+grafico_12
+
+grafico_13 <- data_2016 %>% ggplot() + 
+  geom_point(aes(data_2016$`PIB_per_capita` , Calificacion)) +
+  geom_smooth(aes(data_2016$`PIB_per_capita`,Calificacion),method=lm)+
+  xlab('GDP')
+grafico_13
+
+grafico_14 <- data_2016 %>% ggplot() + 
+  geom_point(aes(data_2016$`Libertades` , Calificacion)) +
+  geom_smooth(aes(data_2016$`Libertades`,Calificacion),method=lm)+
+  xlab('Libertades')
+grafico_14
+
+plot_grid(
+  grafico_11, 
+  grafico_12,
+  grafico_13,
+  grafico_14
+)
+
+# Regresion lineal: puntaje = intercepto + B*Libertades 
+modelo_2 <- lm(Calificacion ~ Libertades, data = data_2016, na.action = na.exclude)
+summary(modelo_2)
+```
+
+Otro aspecto a destacar sobre el análisis que se hizo sobre la data, fue darnos cuenta de que la Libertad (según sugiere la encuesta) podría ser un estimador mucho menos preciso de la felicidad media de un país en comparación a otras variables. Esto se debe a que la desviación estándar es incluso 5 veces mayor que otras variables como el PIBpc. 
+
 
 
 # **_Conclusiones_**
