--- a/PF_RMarkdown.Rmd
+++ b/PF_RMarkdown.Rmd
@@ -200,39 +200,37 @@ En el presente apartado se realizará una descripción de los aspectos más dest
 ### **6. Comparacion de la influencia de la libertad, familia, PIBpc y esperanza de vida sobre la felicidad**
 
 ```{r message=FALSE, warning=FALSE, eval=TRUE, echo=FALSE}
-grafico_11<- data_2016 %>% ggplot() + 
+grafica6<- data_2016 %>% ggplot() + 
   geom_point(aes(Familia , Calificacion)) +
   geom_smooth(aes(Familia,Calificacion),method=lm)+
   xlab('Familia')
+grafica6
 
-grafico_11
-
-grafico_12 <- data_2016 %>% ggplot() + 
+grafica7 <- data_2016 %>% ggplot() + 
   geom_point(aes(data_2016$`Esperanza_vida` , Calificacion)) +
   geom_smooth(aes(data_2016$`Esperanza_vida`, Calificacion), method=lm)+
   xlab('Salud/Esperanza de vida')
-grafico_12
+grafica7
 
-grafico_13 <- data_2016 %>% ggplot() + 
+grafica8 <- data_2016 %>% ggplot() + 
   geom_point(aes(data_2016$`PIB_per_capita` , Calificacion)) +
   geom_smooth(aes(data_2016$`PIB_per_capita`,Calificacion),method=lm)+
   xlab('GDP')
-grafico_13
+grafica8
 
-grafico_14 <- data_2016 %>% ggplot() + 
+grafica9 <- data_2016 %>% ggplot() + 
   geom_point(aes(data_2016$`Libertades` , Calificacion)) +
   geom_smooth(aes(data_2016$`Libertades`,Calificacion),method=lm)+
   xlab('Libertades')
-grafico_14
+grafica9
 
 plot_grid(
-  grafico_11, 
-  grafico_12,
-  grafico_13,
-  grafico_14
+  grafica6, 
+  grafica7,
+  grafica8,
+  grafica9
 )
 
-# Regresion lineal: puntaje = intercepto + B*Libertades 
 modelo_2 <- lm(Calificacion ~ Libertades, data = data_2016, na.action = na.exclude)
 summary(modelo_2)
 ```
