--- a/PF_RMarkdown.Rmd
+++ b/PF_RMarkdown.Rmd
@@ -27,6 +27,9 @@ Encontramos una importancia en este informe debido a la relación que tendría l
 
 # **_Metodología_**
 
+Se utilizaron los datos del World Hapiness Report (Gallup inc.) como punto de partida. Estos, no tenian
+valores faltantes o data que tuviese que ser imputada.
+
 En estos datos, se encuentran diversas variables que utilizaremos en este trabajo para dar respuestas a las preguntas planteadas posteriormente. A continuación, se expondrán las siete variables a utilizar:
 
 - **PIB per Cápita:** El PIB per cápita es un indicador económico que mide la relación existente entre el nivel de renta de un país y su población. Tiene datos que fueron calculados como proyecciones de los valores del 2014, además la ecuación utiliza el logaritmo natural del PIB per cápita debido a que se adapta mejor al resto de datos que el PIB per cápita por sí solo.
